(wip) proportional font support

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -48,6 +48,6 @@
         <file>image/cpy.svg</file>
         <file>image/status.svg</file>
         <file>translations/Guitar_zh-CN.qm</file>
-        <file>translations/Guitar_zh-CN.ts</file>
+		<file>translations/Guitar_zh-TW.qm</file>
     </qresource>
 </RCC>
