--- a/src/CloneDialog.ui
+++ b/src/CloneDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>545</width>
-    <height>140</height>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,6 +58,32 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Advanced Option</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QPushButton" name="pushButton_ssh_key_override">
+        <property name="text">
+         <string>SSH key override...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_clear_ssh_key_override">
+        <property name="text">
+         <string>Clear</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="ReadOnlyLineEdit" name="lineEdit_ssh_key_override"/>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -128,6 +154,11 @@
    <class>DirectoryLineEdit</class>
    <extends>QLineEdit</extends>
    <header>DirectoryLineEdit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ReadOnlyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ReadOnlyLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
