--- a/src/EditRemoteDialog.ui
+++ b/src/EditRemoteDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>574</width>
-    <height>204</height>
+    <width>700</width>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -61,29 +61,13 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>Advance Option</string>
+    <widget class="RemoteAdvancedOptionWidget" name="advanced_option" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>78</height>
+      </size>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QPushButton" name="pushButton_override_ssh_key">
-        <property name="text">
-         <string>SSH key override...</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_clear_ssh_key">
-        <property name="text">
-         <string>Clear</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_ssh_key"/>
-      </item>
-     </layout>
     </widget>
    </item>
    <item>
@@ -137,6 +121,12 @@
    <class>RepositoryLineEdit</class>
    <extends>QLineEdit</extends>
    <header>RepositoryLineEdit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>RemoteAdvancedOptionWidget</class>
+   <extends>QWidget</extends>
+   <header>RemoteAdvancedOptionWidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
