--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>854</width>
+    <width>863</width>
     <height>596</height>
    </rect>
   </property>
@@ -1014,8 +1014,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>854</width>
-     <height>25</height>
+     <width>863</width>
+     <height>35</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1062,6 +1062,11 @@
      <string>&amp;Window</string>
     </property>
     <addaction name="action_window_log"/>
+    <addaction name="separator"/>
+    <addaction name="action_sidebar"/>
+    <addaction name="action_expand_commit_log"/>
+    <addaction name="action_expand_file_list"/>
+    <addaction name="action_expand_diff_view"/>
    </widget>
    <widget class="QMenu" name="menu_Repository">
     <property name="title">
@@ -1121,16 +1126,6 @@
     <addaction name="separator"/>
     <addaction name="action_clean_df"/>
    </widget>
-   <widget class="QMenu" name="menuExperimental">
-    <property name="title">
-     <string>Experimental</string>
-    </property>
-    <addaction name="action_expand_commit_log"/>
-    <addaction name="action_expand_file_list"/>
-    <addaction name="action_expand_diff_view"/>
-    <addaction name="action_sidebar"/>
-    <addaction name="action_wide"/>
-   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_View"/>
    <addaction name="menu_Edit"/>
@@ -1139,7 +1134,6 @@
    <addaction name="menuDestructive_3"/>
    <addaction name="menu_Window"/>
    <addaction name="menu_Help"/>
-   <addaction name="menuExperimental"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="dockWidget_log">
@@ -1667,11 +1661,14 @@
    </property>
   </action>
   <action name="action_sidebar">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Sidebar</string>
    </property>
    <property name="shortcut">
-    <string>F1</string>
+    <string>Ctrl+1</string>
    </property>
   </action>
   <action name="action_wide">
