--- a/src/SettingProgramsForm.ui
+++ b/src/SettingProgramsForm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>309</width>
-    <height>260</height>
+    <width>950</width>
+    <height>736</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -82,6 +82,32 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_select_ssh_command">
+        <property name="text">
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_terminal">
+     <property name="title">
+      <string>Terminal command (option)</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_8">
+      <item>
+       <widget class="QLineEdit" name="lineEdit_terminal_command"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_reset_term_command">
+        <property name="text">
+         <string>Reset</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_select_term_command">
         <property name="text">
          <string>Browse...</string>
         </property>
