squashマージ対応

--- a/src/MergeDialog.ui
+++ b/src/MergeDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>274</height>
+    <width>437</width>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,6 +42,20 @@
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBox_squash">
+     <property name="text">
+      <string>Squash</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
     </widget>
    </item>
    <item>
