--- a/src/SettingPrograms2Form.ui
+++ b/src/SettingPrograms2Form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>309</width>
-    <height>262</height>
+    <width>633</width>
+    <height>358</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,11 +17,18 @@
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>Terminal command</string>
+      <string>Terminal command (option)</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QLineEdit" name="lineEdit_terminal_command"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_reset_terminal_command">
+        <property name="text">
+         <string>Reset</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_select_terminal_command">
@@ -36,7 +43,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
-      <string>File manager command</string>
+      <string>File manager command (option)</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
