--- a/src/SettingPrograms2Form.ui
+++ b/src/SettingPrograms2Form.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="groupBox_terminal">
      <property name="title">
       <string>Terminal command (option)</string>
      </property>
@@ -41,7 +41,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="groupBox_explorer">
      <property name="title">
       <string>File manager command (option)</string>
      </property>
