remove use of file command

--- a/src/CheckoutDialog.ui
+++ b/src/CheckoutDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>366</width>
-    <height>251</height>
+    <height>260</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,6 +34,19 @@
       <string>RadioButton</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item>
     <widget class="QComboBox" name="comboBox_branch_name">
