add magic.mgc as resource

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -50,5 +50,6 @@
         <file>translations/Guitar_zh-CN.qm</file>
         <file>translations/Guitar_zh-TW.qm</file>
         <file>translations/Guitar_es.qm</file>
+        <file>filemagic/magic.mgc</file>
     </qresource>
 </RCC>
