--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1051,7 +1051,7 @@
      <x>0</x>
      <y>0</y>
      <width>816</width>
-     <height>25</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1308,51 +1308,30 @@
          </widget>
         </item>
         <item>
+         <widget class="TextEditorWidget" name="widget_log" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="Line" name="line_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
          </widget>
-        </item>
-        <item>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <item row="0" column="1">
-           <widget class="QScrollBar" name="verticalScrollBar_log">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="TextEditorWidget" name="widget_log" native="true">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>80</height>
-             </size>
-            </property>
-            <property name="focusPolicy">
-             <enum>Qt::ClickFocus</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QScrollBar" name="horizontalScrollBar_log">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-         </layout>
         </item>
        </layout>
       </widget>
@@ -1754,6 +1733,12 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
+   <class>TextEditorWidget</class>
+   <extends>QWidget</extends>
+   <header>../../src/texteditor/TextEditorWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>FileDiffWidget</class>
    <extends>QWidget</extends>
    <header>FileDiffWidget.h</header>
@@ -1786,12 +1771,6 @@
    <header>ReadOnlyLineEdit.h</header>
   </customwidget>
   <customwidget>
-   <class>TextEditorWidget</class>
-   <extends>QWidget</extends>
-   <header>TextEditorWidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>ClearButton</class>
    <extends>QToolButton</extends>
    <header>ClearButton.h</header>
@@ -1819,7 +1798,6 @@
   <tabstop>listWidget_files</tabstop>
   <tabstop>widget_diff_view</tabstop>
   <tabstop>toolButton_stop_process</tabstop>
-  <tabstop>widget_log</tabstop>
  </tabstops>
  <resources>
   <include location="resources/resources.qrc"/>
