--- a/extra/TextEditor/src/MainWindow.ui
+++ b/extra/TextEditor/src/MainWindow.ui
@@ -31,25 +31,7 @@
      <number>0</number>
     </property>
     <item row="0" column="0">
-     <widget class="TextEditorWidget" name="widget" native="true">
-      <property name="focusPolicy">
-       <enum>Qt::StrongFocus</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QScrollBar" name="verticalScrollBar">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QScrollBar" name="horizontalScrollBar">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
+     <widget class="TextEditorWidget" name="widget" native="true"/>
     </item>
    </layout>
   </widget>
@@ -59,7 +41,7 @@
      <x>0</x>
      <y>0</y>
      <width>593</width>
-     <height>18</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -96,7 +78,7 @@
   <customwidget>
    <class>TextEditorWidget</class>
    <extends>QWidget</extends>
-   <header>TextEditorWidget.h</header>
+   <header>../../src/texteditor/TextEditorWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
