--- a/src/RemoteAdvancedOptionWidget.ui
+++ b/src/RemoteAdvancedOptionWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>740</width>
-    <height>78</height>
+    <height>143</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,23 +31,51 @@
      <property name="title">
       <string>Advanced Option</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QPushButton" name="pushButton_browse_ssh_key">
-        <property name="text">
-         <string>SSH key override...</string>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QPushButton" name="pushButton_browse_ssh_key">
+          <property name="text">
+           <string>SSH key override...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_clear_ssh_key">
+          <property name="text">
+           <string>Clear</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_information">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_clear_ssh_key">
-        <property name="text">
-         <string>Clear</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="ReadOnlyLineEdit" name="lineEdit_ssh_key"/>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="ReadOnlyLineEdit" name="lineEdit_ssh_key"/>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
